# fun-with-flags-rs

./: .gitignore  Cargo.toml  README.md  README.tpl  bench.sh  docker-compose.yaml  example.env  fun-with-flags.toml  migrate.sh  run_postgres.sh  test.sh  test_cached_postgres.sh  test_cached_redis.sh  test_postgres.sh  test_redis.sh  test_unit.sh
.github/workflows/: rust.yml
benches/: roundtrip.rs
elixir/: .gitignore  README.md  do.sh  mix.exs
elixir/config/: config.exs
elixir/lib/: fun_with_flags_rs.ex
elixir/lib/fun_with_flags_rs/: application.ex  repo.ex
elixir/priv/repo/migrations/: 00000000000000_create_feature_flags_table.exs
elixir/test/: fun_with_flags_rs_test.exs
examples/: couchdb.rs  postgres.rs  works.rs
migrations/00000000000001_create_feature_flags_table/: down.sql  up.sql
src/: backend.rs  config.rs  error.rs  functions.rs  fwf.code-workspace  lib.rs  models.rs  schema.rs  traits.rs
src/backend/: cached.rs  mock.rs  null.rs  other_postgres.rs  postgres.rs  redis.rs
tests/: integration.rs
