[package]
name = "fun-with-flags"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", optional = true }
diesel_migrations = { version = "1.4.0", optional = true }
dotenv = "0.15.0"
sha2 = "0.9.1"
rand = "0.7.3"
mockall = "0.7.2"
cfg-if = "0.1.10"
lazy_static = "1.4.0"
r2d2 = {version = "0.8.9", optional = true}
redis = {version = "0.17.0", features = ["r2d2"], optional = true}

[dev-dependencies]
serial_test = "*"

[features]
redis-backend = ["r2d2", "redis"]
postgres-backend = ["diesel/postgres", "diesel_migrations"]

[[example]]
name = "postgres"
required-features = ["postgres-backend"]