[package]
name = "fun-with-flags"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sha2 = "0.9.1"
rand = "0.7.3"
mockall = "0.7.2"
cfg-if = "0.1.10"
lazy_static = "1.4.0"
config = {version = "0.10.1", features = ["toml"], default-features = false}
serde = "1.0"
serde_derive = "1.0"
r2d2 = {version = "0.8.9", optional = true}
redis = {version = "0.17.0", features = ["r2d2"], optional = true}
postgres = {version = "0.17.5", optional = true}
r2d2_postgres = {version = "0.16.0", optional = true}
state = {version = "0.4.1", optional = true}
lru_time_cache = {version = "0.10.0", optional = true}
criterion  = {version = "0.3.3", optional = true}
rayon  = {version = "1.3.1", optional = true}
reqwest = {version = "0.10.7", optional = true, features = ["json", "blocking"]}
serde_json = {version = "1.0", optional = true}

[dev-dependencies]
serial_test = "*"
float-cmp = "*"

[features]
redis-backend = ["r2d2", "redis", "state"]
postgres-backend = ["r2d2", "postgres", "r2d2_postgres", "state"]
couchdb-backend = ["reqwest", "serde_json"]
cached = ["state", "lru_time_cache"]
bench = ["criterion"]

[[example]]
name = "postgres"
required-features = ["postgres-backend"]

[[example]]
name = "couchdb"
required-features = ["couchdb-backend"]

[[example]]
name = "works"
required-features = ["rayon"]

[[bench]]
name = "roundtrip"
harness = false
required-features = ["bench"]
